# uc-course-lab-excercises

advanced-AI/: .gitgnore  README.md  chatterbot.sqlite3
advanced-AI/.venv312/: pyvenv.cfg
advanced-AI/week-1-qrgen/: MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt
advanced-AI/week-4-chatbot/: MANIFEST.in  Readme.md  chatterbot_db.sqlite3  chatterbot_db.sqlite3-shm  db.sqlite3  requirements.txt  terminal_client.py
advanced-AI/week-4-chatbot/chatbot_api/: urls.py  views.py
advanced-AI/week-4-chatbot/chatbot_project/: asgi.py  settings.py  urls.py  wsgi.py
advanced-AI/week-6-fraud-detection/: ReadMe.md  config.py  data_loader.py  evaluator.py  main.py  model_trainer.py  plotter.py  pyproject.toml  requirements.txt
advanced-AI/week-6-fraud-detection/output_results/: anomaly_scores.csv  performance_report.txt
advanced-programing-lang/: a.out
advanced-programing-lang/week-2/part-1/: sum.cpp  sum.js  sum.py
advanced-programing-lang/week-4/: ReadMe.md
uc-secure-software-dev/secure-app/: .env  docker-compose.yml  readme.md
uc-secure-software-dev/uc-securesoftdev/: ReadMe.md  pom.xml
uc-secure-software-dev/uc-securesoftdev-residence-1/: ReadMe.md  pom.xml
uc-secure-software-dev/uc-securesoftdev-residence-2/: ReadMe.md  index.html  script.js  style.css
uc-secure-software-dev/uc-securesoftdev-residence-3/: online-payment-system-SQLI-protection.md  online-payment-system-XCSS-protection.md
uc-secure-software-dev/uc-securesoftdev-residence-4/: mitm_protection_pseudocode.md  tls_secure_comm_pseudocode.md
uc-securesoftdev/: ReadMe.md
(+289 files in other folders)
